regression_tests/snap/check/testom20.lst
================================================================================

                          PROGRAM SNAP  Version 2.7.10

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Jun 18 2018 09:20:21

================================================================================
                     Run at 18-JUN-2018 09:34:47 by ccrook




================================================================================
Regression test om1 - obs modifications - invalid specification should cause er   18-JUN-2018 09:34:47

                                     ERRORS

================================================================================

Note: 7 errors reported in testom20.err
